fix(core): harden task/finance flows and complete H2 schema